# leetcode

./: .gitignore
cpp/: CMakeLists.txt  note.cpp
cpp/q-19-remove-nth-node-from-end-of-list/: q-19-remove-nth-node-from-end-of-list.cpp  q-19-remove-nth-node-from-end-of-list.md
cpp/q-21-merge-two-sorted-lists/: q-21-merge-two-sorted-lists.cpp  q-21-merge-two-sorted-lists.md
cpp/q-23-merge-k-sorted-lists/: q-23-merge-k-sorted-lists-0.cpp  q-23-merge-k-sorted-lists.cpp  q-23-merge-k-sorted-lists.md
cpp/q-2379-minimum-recolors-to-get-k-consecutive-black-blocks/: q-2379-minimum-recolors-to-get-k-consecutive-black-blocks.cpp
cpp/q-86-partition-list/: q-86-partition-list.cpp  q-86-partition-list.md
cpp/utils/: utils.cpp  utils.h
go/: go.mod  note.go  note.md
go/q-1-two-sum/: q-1-two-sum.go  q-1-two-sum.md
go/q-102-binary-tree-level-order-traversal/: q-102-binary-tree-level-order-traversal.go  q-102-binary-tree-level-order-traversal.md
go/q-104-maximum-depth-of-binary-tree/: q-104-maximum-depth-of-binary-tree.go  q-104-maximum-depth-of-binary-tree.md
go/q-1094-car-pooling/: q-1094-car-pooling.go  q-1094-car-pooling.md
go/q-1109-corporate-flight-bookings/: q-1109-corporate-flight-bookings.go  q-1109-corporate-flight-bookings.md
go/q-111-minimum-depth-of-binary-tree/: q-111-minimum-depth-of-binary-tree.go
go/q-12-integer-to-roman/: q-12-integer-to-roman.go  q-12-integer-to-roman.md
go/q-121-best-time-to-buy-and-sell-stock/: q-121-best-time-to-buy-and-sell-stock.go
go/q-122-best-time-to-buy-and-sell-stock-ii/: q-122-best-time-to-buy-and-sell-stock-ii.go
(+107 files in other folders)
